# internal/api/v1/openapi_types.gen.go
@@ -3,6 +3,21 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package v1
 
+// Defines values for OrderItemStatus.
+const (
+	CancelledByCompany OrderItemStatus = "cancelled_by_company"
+	CancelledByUser    OrderItemStatus = "cancelled_by_user"
+	Complete           OrderItemStatus = "complete"
+	Confirmed          OrderItemStatus = "confirmed"
+	Delivered          OrderItemStatus = "delivered"
+	Delivering         OrderItemStatus = "delivering"
+	Pending            OrderItemStatus = "pending"
+	Processing         OrderItemStatus = "processing"
+	ReadyForPickup     OrderItemStatus = "ready_for_pickup"
+	ReadyForShipping   OrderItemStatus = "ready_for_shipping"
+	Rejected           OrderItemStatus = "rejected"
+)
+
 // CreateOrderItem defines model for CreateOrderItem.
 type CreateOrderItem struct {
 	// Comment Comment to an order
@@ -20,20 +35,7 @@ type CreateOrderRequest struct {
 
 // CreateOrderResponse defines model for CreateOrderResponse.
 type CreateOrderResponse struct {
-	Data CreatedOrder `json:"data"`
-}
-
-// CreatedOrder defines model for CreatedOrder.
-type CreatedOrder struct {
-	// Comment Comment to an order
-	Comment *string `json:"comment,omitempty"`
-
-	// Id Id of created order
-	Id       string        `json:"id"`
-	Products []ProductItem `json:"products"`
-
-	// Timestamp Timestamp of an order in RFC3339 format
-	Timestamp string `json:"timestamp"`
+	Data OrderItem `json:"data"`
 }
 
 // ErrorItem defines model for ErrorItem.
@@ -66,6 +68,25 @@ type ErrorSource struct {
 	// Pointer a JSON Pointer [RFC6901] to the value in the request document that caused the error
 	Pointer string `json:"pointer"`
 }
+
+// OrderItem defines model for OrderItem.
+type OrderItem struct {
+	// Comment Comment to an order
+	Comment *string `json:"comment,omitempty"`
+
+	// Id Id of created order
+	Id       string        `json:"id"`
+	Products []ProductItem `json:"products"`
+
+	// Status Status of created order
+	Status OrderItemStatus `json:"status"`
+
+	// Timestamp Timestamp of an order in RFC3339 format
+	Timestamp string `json:"timestamp"`
+}
+
+// OrderItemStatus Status of created order
+type OrderItemStatus string
 
 // ProductItem defines model for ProductItem.
 type ProductItem struct {
